--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8" http-equiv="refresh" content="0; URL=/" />
-	<title>404 Not Found</title>
-</head>
-<body>
-	<h1>404 Not Found</h1>
-	<p>The page you are looking for could not be found.</p>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Manage My Residents</title>
+    <script type="text/javascript">
+      // Github Pages doesn't support single page apps, so we need to redirect to the root
+      var pathSegmentsToKeep = 1;
+
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
+      );
+    </script>
+  </head>
+  <body>
+  </body>
 </html>
